welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (estFaceMur() && (((getDirection()) == Direction.EST) ||((getDirection()) == Direction.OUEST)))  {
        ^SnakeBuggle:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	return false;
        ^